2016-04-18  Wilco Dijkstra  <wdijkstr@arm.com>

	[BZ #18712]
	* string/string-inlines.c (__STRING2_COPY_TYPE): Add, moved from string2.h.
	(__old_mempcpy_small): Likewise.
	(__old_strcpy_small): Likewise.
	(__old_stpcpy_small): Likewise.
	(__old_strpbrk_c2): Fix compat symbol name.
	(__old_strpbrk_c3): Likewise.
	* string/bits/string2.h (__STRING2_COPY_TYPE): Remove.
	(__mempcpy_small): Remove.
	(__strcpy_small): Remove.
	(__stpcpy_small): Remove.

2016-04-16  Robin van der Vliet <info@robinvandervliet.com>

	[BZ #19400]
	* locale/iso-639.def: Add the Talossan/tzl language.

2016-04-16  Mike Frysinger  <vapier@gentoo.org>

	[BZ #16983]
	* locale/programs/ld-address.c (address_finish): Update postal_fmt
	comment.  Add "ln" to strchr check on postal_fmt.

2016-04-16  Mike Frysinger  <vapier@gentoo.org>

	* locale/programs/ld-telephone.c (telephone_finish): Add %t to the
	default tel_int_fmt.  Add "Cet" to strchr check on tel_int_fmt and
	tel_dom_fmt.

2016-04-15  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/Makefile:
	(sysdep_routines): Added __strlen_power8.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c: Added
	__strlen_power8 entry.
	* sysdeps/powerpc/powerpc64/multiarch/strlen-power8.S: New file.
	Implementation for POWER8.
	* sysdeps/powerpc/powerpc64/multiarch/strlen.c: Added IFUNC selector
	for __strlen_power8.
	* sysdeps/powerpc/powerpc64/power8/strlen.S: New file.
	Implementation for POWER8.

2016-04-15  Mike Frysinger  <vapier@gentoo.org>

	* locale/iso-4217.def: Add SSP and change ZMK to ZMW.

2016-04-15   H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86/cpu-features.c (init_cpu_features): Detect Intel
	Goldmont and Airmont processors.

2016-04-15  Wilco Dijkstra  <wdijkstr@arm.com>

	* string/string.h: Use __GNUC_PREREQ(3,4) for bits/string2.h.
	* string/bits/string2.h (__STRING2_SMALL_GET16): Remove.
	(__STRING2_SMALL_GET32): Remove.
	(memset): Remove.
	(__memset_1): Remove.
	(__memset_gc): Remove.